--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ body {
     background-color: #f5f6f7;
 }
 
+.header {
+    text-align: center;
+    text-transform: uppercase;
+}
+
 .gallery img {
     width: 100%;
     max-width: 350px;
