--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
 .header {
     text-align: center;
     text-transform: uppercase;
+    background-color: #0a0a23;
+    color: #fff;
 }
 
 .gallery img {
