--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     text-transform: uppercase;
     background-color: #0a0a23;
     color: #fff;
+    border-bottom: 4px solid #fdb347;
 }
 
 .gallery img {
