--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .gallery img {
